# glChurch

./: CMakeLists.txt
DerivedData/openGL_test/: info.plist
DerivedData/openGL_test/Index/Debug/macosx10.11-x86_64/openGL_test.xcindex/: db.xcindexdb-shm  db.xcindexdb-wal
glChurch/: main.cpp  main2.cpp  mainWin.cpp
openGL_test/: main.cpp  main2.cpp
openGL_test.xcodeproj/: project.pbxproj
openGL_test.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
openGL_test.xcodeproj/xcuserdata/Ivan.xcuserdatad/xcschemes/: openGL_test.xcscheme  xcschememanagement.plist
